Artefact details Adds curses and activations

--- a/lists/default/description
+++ b/lists/default/description
@@ -1,3 +1,3 @@
 |description
-1@[alignment] [animal]-spirited [ageGroup]
-1@[height], [attitude] [profession]
+[alignment] [animal]-spirited [ageGroup]
+[height], [attitude] [profession]
